--- a/app/src/main/res/layout/item_audio.xml
+++ b/app/src/main/res/layout/item_audio.xml
@@ -6,122 +6,92 @@
     <data>
 
         <variable
-            name="Title"
-            type="String" />
-
-        <variable
-            name="Description"
-            type="String" />
+            name="fontSize"
+            type="Integer" />
 
         <variable
             name="onClick"
             type="android.view.View.OnClickListener" />
 
         <variable
-            name="Status"
-            type="Integer" />
-
-        <variable
             name="theme"
             type="uz.mahmudxon.halqa.util.theme.Theme" />
+
+        <variable
+            name="title"
+            type="String" />
+
+        <variable
+            name="description"
+            type="String" />
 
     </data>
 
     <androidx.cardview.widget.CardView
+        cardBackColor="@{theme.cardColor}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        cardBackColor="@{theme.cardColor}"
-        app:cardCornerRadius="6dp">
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="0dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:backgroundColor="#fff"
-            >
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="16dp">
 
             <FrameLayout
                 android:id="@+id/imageView"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_margin="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:onClick="@{onClick}">
+                android:background="@drawable/play_button_back">
 
                 <ImageView
-                    android:id="@+id/img"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/play_button_back"
-                    android:padding="8dp"
+                    android:src="@drawable/ic_pause"
+                    android:padding="12dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/ic_audio_book" />
-
-                <ImageView
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_gravity="bottom|right"
-                    android:background="@drawable/inner_button_back"
-                    android:padding="5dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/ic_download"
-                    visibility="@{Status == 0}" />
-
-                <ProgressBar
-                    android:id="@+id/pb"
-                    style="@android:style/Widget.Holo.Light.ProgressBar.Large.Inverse"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:indeterminateTint="@color/white"
-                    android:max="100"
-                    android:progress="0"
-                    tools:visibility="visible"
-                    visibility="@{Status == 1}" />
+                    />
 
             </FrameLayout>
 
-
-            <TextView
-                android:id="@+id/title"
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:fontFamily="@font/open_sans"
-                android:singleLine="true"
-                android:text="@{Title}"
-                textColor="@{theme.primaryTextColor}"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/description"
-                app:layout_constraintLeft_toRightOf="@id/imageView"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed"
-                tools:text="1-bob" />
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:fontFamily="@font/open_sans"
-                android:singleLine="true"
-                android:text="@{Description}"
-                textColor="@{theme.secondaryTextColor}"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/imageView"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                visibility="@{Status == 0}"
-                tools:text="5.3 MB | M4A" />
+                <TextView
+                    textColor="@{theme.primaryTextColor}"
+                    textSize="@{fontSize}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{title}"
+                    android:textStyle="bold"
+                    tools:text="1-Bob"
+                    tools:textSize="16sp" />
+
+                <TextView
+                    textColor="@{theme.secondaryTextColor}"
+                    textSize="@{(fontSize-2)}"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{description}"
+                    tools:text="24.5 MB | M4A"
+                    tools:textSize="14sp" />
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
     </androidx.cardview.widget.CardView>
 </layout>
