--- a/app/src/main/res/layout/item_audio.xml
+++ b/app/src/main/res/layout/item_audio.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="uz.mahmudxon.halqa.R" />
+
         <variable
             name="fontSize"
             type="Integer" />
@@ -45,18 +47,17 @@
             android:padding="16dp">
 
             <FrameLayout
-                android:id="@+id/imageView"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/play_button_back">
 
                 <ImageView
+                    android:id="@+id/icon"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_pause"
                     android:padding="12dp"
                     android:scaleType="fitXY"
-                    />
+                    android:src="@drawable/ic_pause" />
 
             </FrameLayout>
 
