--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -75,7 +75,7 @@
                 android:layout_width="?actionBarSize"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:padding="16dp"
+                android:padding="20dp"
                 android:src="@drawable/ic_download"
                 tools:ignore="ContentDescription" />
 
@@ -95,9 +95,11 @@
 
                 <ImageView
                     android:id="@+id/cancel_download"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="20dp"
                     android:layout_gravity="center"
+                    iconColor="@{theme.primaryTextColor}"
                     android:src="@drawable/ic_cancel" />
 
             </FrameLayout>
