--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -18,110 +18,133 @@
             type="Boolean" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         backgroundColor="@{theme.actionBarColor}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:gravity="center">
+            android:layout_height="?actionBarSize">
 
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                android:gravity="center"
+                app:layout_collapseMode="parallax"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                backgroundColor="@{theme.actionBarColor}">
 
-            <ImageView
-                android:id="@+id/back_button"
-                iconColor="@{theme.primaryTextColor}"
-                android:layout_width="?actionBarSize"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:contentDescription="@null"
-                android:padding="16dp"
-                android:src="@drawable/ic_back" />
-
-
-            <TextView
-                android:id="@+id/title"
-                textColor="@{theme.primaryTextColor}"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ellipsize="marquee"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:freezesText="true"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:textAlignment="center"
-                android:textSize="18sp" />
-
-
-            <ImageView
-                android:id="@+id/play"
-                iconColor="@{theme.primaryTextColor}"
-                android:layout_width="?actionBarSize"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:padding="16dp"
-                android:src="@drawable/ic_audio"
-                tools:ignore="ContentDescription" />
-
-            <ImageView
-                android:id="@+id/download"
-                iconColor="@{theme.primaryTextColor}"
-                android:layout_width="?actionBarSize"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:padding="20dp"
-                android:src="@drawable/ic_download"
-                tools:ignore="ContentDescription" />
-
-            <FrameLayout
-                android:id="@+id/downloading"
-                android:layout_width="?actionBarSize"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.progressindicator.CircularProgressIndicator
-                    android:id="@+id/download_progress"
-                    progressColor="@{theme.primaryTextColor}"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:indeterminate="false"
-                    android:max="102" />
 
                 <ImageView
-                    android:id="@+id/cancel_download"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="20dp"
-                    android:layout_gravity="center"
+                    android:id="@+id/back_button"
                     iconColor="@{theme.primaryTextColor}"
-                    android:src="@drawable/ic_cancel" />
+                    android:layout_width="?actionBarSize"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:contentDescription="@null"
+                    android:padding="16dp"
+                    android:src="@drawable/ic_back" />
 
-            </FrameLayout>
 
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/playing"
-                layerColor="@{theme.primaryTextColor}"
-                android:layout_width="?actionBarSize"
-                android:layout_height="match_parent"
-                android:padding="16dp"
-                android:scaleType="fitXY"
-                app:lottie_autoPlay="true"
-                app:lottie_loop="true"
-                app:lottie_rawRes="@raw/audio_wave" />
+                <TextView
+                    android:id="@+id/title"
+                    textColor="@{theme.primaryTextColor}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ellipsize="marquee"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:freezesText="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
 
+                <ImageView
+                    android:id="@+id/play"
+                    iconColor="@{theme.primaryTextColor}"
+                    android:layout_width="?actionBarSize"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:padding="16dp"
+                    android:src="@drawable/ic_audio"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/download"
+                    iconColor="@{theme.primaryTextColor}"
+                    android:layout_width="?actionBarSize"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:padding="20dp"
+                    android:src="@drawable/ic_download"
+                    tools:ignore="ContentDescription" />
+
+                <FrameLayout
+                    android:id="@+id/downloading"
+                    android:layout_width="?actionBarSize"
+                    android:layout_height="match_parent">
+
+                    <com.google.android.material.progressindicator.CircularProgressIndicator
+                        android:id="@+id/download_progress"
+                        progressColor="@{theme.primaryTextColor}"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:indeterminate="false"
+                        android:max="102" />
+
+                    <ImageView
+                        android:id="@+id/cancel_download"
+                        iconColor="@{theme.primaryTextColor}"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:padding="20dp"
+                        android:src="@drawable/ic_cancel" />
+
+                </FrameLayout>
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/playing"
+                    layerColor="@{theme.primaryTextColor}"
+                    android:layout_width="?actionBarSize"
+                    android:layout_height="match_parent"
+                    android:padding="16dp"
+                    android:scaleType="fitXY"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    app:lottie_rawRes="@raw/audio_wave" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/overview_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:fitsSystemWindows="true"
+                android:visibility="gone"
+                app:layout_collapseMode="parallax"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:titleTextColor="@color/white" />
+
+        </com.google.android.material.appbar.AppBarLayout>
 
         <include
             android:id="@+id/chapter_layout"
             layout="@layout/layout_chapter"
-            app:visibility="@{!loading}" />
+            android:descendantFocusability="beforeDescendants"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:visibility="@{!loading}"
+            />
 
         <FrameLayout
             visibility="@{loading}"
@@ -137,5 +160,5 @@
 
         </FrameLayout>
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
