--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -143,7 +143,8 @@
             layout="@layout/layout_chapter"
             android:descendantFocusability="beforeDescendants"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:visibility="@{!loading}" />
+            app:visibility="@{!loading}"
+            />
 
         <FrameLayout
             visibility="@{loading}"
