--- a/app/src/main/res/layout/layout_chapter.xml
+++ b/app/src/main/res/layout/layout_chapter.xml
@@ -28,9 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="30dp"
-            android:paddingBottom="30dp"
-            >
+            android:paddingTop="80dp"
+            android:paddingBottom="30dp">
 
             <TextView
                 textColor="@{theme.primaryTextColor}"
