--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="theme"
             type="uz.mahmudxon.halqa.util.theme.Theme" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        backgroundColor="@{theme.backgroundColor}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        backgroundColor="@{theme.backgroundColor}"
-        >
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:gravity="center"
             backgroundColor="@{theme.actionBarColor}"
-            android:layout_height="?actionBarSize">
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:gravity="center">
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
+                android:id="@+id/title"
                 textColor="@{theme.primaryTextColor}"
-                android:textAlignment="center"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:maxLines="1"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:textAllCaps="true"
                 android:text="@string/app_name"
-                />
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -41,16 +41,14 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
+            backgroundColor="@{theme.actionBarColor}"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            backgroundColor="@{theme.actionBarColor}"
-            app:menu="@menu/main_bottom_menu"
-            />
+            app:menu="@menu/main_bottom_menu" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
