--- a/app/src/main/res/drawable/ic_download.xml
+++ b/app/src/main/res/drawable/ic_download.xml
@@ -1,27 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="25dp"
-    android:height="25dp"
-    android:viewportWidth="21"
-    android:viewportHeight="20">
-    <path
-        android:pathData="M19.3999,13V17C19.3999,17.5304 19.1892,18.0391 18.8141,18.4142C18.439,18.7893 17.9303,19 17.3999,19H3.3999C2.8695,19 2.3608,18.7893 1.9857,18.4142C1.6106,18.0391 1.3999,17.5304 1.3999,17V13"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2"
-        android:fillColor="#00000000"
-        android:strokeColor="#ffffff"
-        android:strokeLineCap="round" />
-    <path
-        android:pathData="M5.3994,8.0002L10.3994,13.0002L15.3994,8.0002"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2"
-        android:fillColor="#00000000"
-        android:strokeColor="#ffffff"
-        android:strokeLineCap="round" />
-    <path
-        android:pathData="M10.3999,13V1"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2"
-        android:fillColor="#00000000"
-        android:strokeColor="#ffffff"
-        android:strokeLineCap="round" />
+    android:width="86dp"
+    android:height="86dp"
+    android:viewportWidth="86"
+    android:viewportHeight="86">
+  <path
+      android:pathData="M32.636,1.066C28.295,2.216 26.981,4.293 29.194,6.506C30.42,7.732 31.421,7.811 34.581,6.934C47.522,3.341 64.162,9.371 72.508,20.678C76.611,26.236 79.962,36.203 79.962,42.845C79.962,49.487 76.611,59.454 72.508,65.012C66.124,73.661 53.805,79.845 42.962,79.845C37.108,79.845 27.266,76.91 23.048,73.906C19.159,71.137 16.462,71.522 16.462,74.846C16.462,76.885 17.605,77.902 22.962,80.63C40.425,89.52 60.753,86.218 73.856,72.364C96.447,48.477 85.281,9.675 53.427,1.378C46.848,-0.336 38.402,-0.463 32.636,1.066ZM12.095,13.297C6.714,18.987 1.553,28.485 2.152,31.595C2.338,32.561 3.379,33.345 4.476,33.345C5.906,33.345 7.295,31.666 9.438,27.345C11.075,24.045 14.587,19.162 17.242,16.494C22.236,11.475 22.976,8.566 19.389,8.05C17.981,7.848 15.692,9.494 12.095,13.297ZM40.671,26.469C40.281,26.859 39.962,32.142 39.962,38.208V49.237L36.568,45.947C32.929,42.421 29.727,42.113 29.126,45.231C28.707,47.407 40.483,59.845 42.962,59.845C45.441,59.845 57.217,47.407 56.798,45.231C56.199,42.124 52.997,42.419 49.391,45.914L46.031,49.171L45.746,37.758C45.482,27.14 45.32,26.325 43.421,26.053C42.298,25.892 41.061,26.08 40.671,26.469ZM0.284,41.448C-0.894,44.518 1.763,56.139 5.177,62.845C7.905,68.202 8.922,69.345 10.961,69.345C14.24,69.345 14.68,66.662 12.013,62.917C9.211,58.982 7.001,52.54 6.155,45.845C5.562,41.153 5.129,40.298 3.207,40.025C1.778,39.822 0.708,40.343 0.284,41.448Z"
+      android:fillColor="#FFFFFF"
+      android:fillType="evenOdd"/>
 </vector>
