--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,19 +9,31 @@
         android:id="@+id/mainFragment"
         android:name="uz.mahmudxon.halqa.ui.main.MainFragment"
         android:label="MainFragment"
-        tools:layout="@layout/fragment_main" >
+        tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_mainFragment_to_storyFragment"
             app:destination="@id/storyFragment"
             app:enterAnim="@anim/slide_left"
             app:exitAnim="@anim/wait_anim"
             app:popEnterAnim="@anim/wait_anim"
-            app:popExitAnim="@anim/slide_right"/>
+            app:popExitAnim="@anim/slide_right" />
+        <action
+            android:id="@+id/action_mainFragment_to_authorFragment"
+            app:destination="@id/authorFragment"
+            app:enterAnim="@anim/slide_left"
+            app:exitAnim="@anim/wait_anim"
+            app:popEnterAnim="@anim/wait_anim"
+            app:popExitAnim="@anim/slide_right" />
     </fragment>
     <fragment
         android:id="@+id/storyFragment"
         android:name="uz.mahmudxon.halqa.ui.story.StoryFragment"
         android:label="StoryFragment"
-        tools:layout="@layout/fragment_story"
+        tools:layout="@layout/fragment_story" />
+    <fragment
+        android:id="@+id/authorFragment"
+        android:name="uz.mahmudxon.halqa.ui.author.AuthorFragment"
+        android:label="AuthorFragment"
+        tools:layout="@layout/fragment_author"
         />
 </navigation>
