--- a/app/src/main/res/layout/fragment_author.xml
+++ b/app/src/main/res/layout/fragment_author.xml
@@ -21,6 +21,17 @@
             android:layout_height="?actionBarSize"
             android:gravity="center">
 
+
+            <ImageView
+                android:id="@+id/back_button"
+                iconColor="@{theme.primaryTextColor}"
+                android:layout_width="?actionBarSize"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:contentDescription="@null"
+                android:padding="16dp"
+                android:src="@drawable/ic_back" />
+
             <TextView
                 android:id="@+id/title"
                 textColor="@{theme.primaryTextColor}"
@@ -28,9 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:maxLines="1"
-                android:text="@string/app_name"
-                android:textAlignment="center"
-                android:textAllCaps="true"
+                android:text="@string/about_authors"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
