--- a/app/src/main/res/layout/item_author.xml
+++ b/app/src/main/res/layout/item_author.xml
@@ -52,48 +52,53 @@
                 tools:src="@mipmap/ic_launcher" />
 
 
+            <TextView
+                textColor="@{theme.primaryTextColor}"
+                textSize="@{fontSize}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{title}"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Chapter 1"
+                tools:textSize="16sp" />
+
+            <TextView
+                textColor="@{theme.secondaryTextColor}"
+                textSize="@{(fontSize-4)}"
+                visibility="@{job_title.length() > 0}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{job_title}"
+                android:textAlignment="center"
+                tools:text="Chapter 1"
+                tools:textSize="12sp" />
+
+            <TextView
+                textColor="@{theme.primaryTextColor}"
+                textSize="@{(fontSize-2)}"
+                visibility="@{description.length() > 0}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{description}"
+                tools:text="Chapter 1"
+                tools:textSize="14sp" />
 
 
-                <TextView
-                    textColor="@{theme.primaryTextColor}"
-                    textSize="@{fontSize}"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{title}"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    tools:text="Chapter 1"
-                    tools:textSize="16sp" />
-
-                <TextView
-                    textColor="@{theme.secondaryTextColor}"
-                    textSize="@{(fontSize-4)}"
-                    visibility="@{job_title.length() > 0}"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{job_title}"
-                    android:textAlignment="center"
-                    tools:text="Chapter 1"
-                    tools:textSize="12sp" />
-
-                <TextView
-                    textColor="@{theme.primaryTextColor}"
-                    textSize="@{(fontSize-2)}"
-                    visibility="@{description.length() > 0}"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{description}"
-                    tools:text="Chapter 1"
-                    tools:textSize="14sp" />
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/list_links"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:itemCount="1"
-                    tools:listitem="@layout/item_social_media"
-                    />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_links"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_social_media" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
