--- a/app/src/main/res/layout-sw600dp/item_author.xml
+++ b/app/src/main/res/layout-sw600dp/item_author.xml
@@ -49,7 +49,9 @@
                 android:layout_width="250dp"
                 android:layout_height="250dp"
                 android:padding="16dp"
-                tools:src="@mipmap/ic_launcher" />
+                tools:src="@mipmap/ic_launcher"
+                android:scaleType="centerCrop"
+                />
 
 
             <LinearLayout
