--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -97,7 +97,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:visibility="gone">
 
                         <TextView
                             textColor="@{theme.primaryTextColor}"
@@ -126,11 +127,11 @@
 
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:id="@+id/changeTheme"
+                        onClick="@{onClick}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
                         android:background="?selectableItemBackground"
-                        onClick="@{onClick}"
+                        android:gravity="center"
                         android:orientation="horizontal">
 
 
@@ -229,45 +230,41 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="16dp"
                     android:gravity="center"
-                    >
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
 
                     <TextView
                         textColor="@{theme.primaryTextColor}"
+                        textSize="@{fontSize}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/test_story"
-                        tools:textSize="16sp"
-                        textSize="@{fontSize}"
                         android:maxLength="200"
-                        />
+                        android:text="@string/test_story"
+                        tools:textSize="16sp" />
 
                     <TextView
                         textColor="@{theme.primaryTextColor}"
+                        textSize="@{(fontSize + 2)}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/test_title"
-                        tools:textSize="20sp"
-                        android:textStyle="bold"
-                        textSize="@{(fontSize + 2)}"
                         android:textAlignment="textEnd"
-                        />
+                        android:textStyle="bold"
+                        tools:textSize="20sp" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
             </androidx.cardview.widget.CardView>
 
 
-
             <TextView
                 textColor="@{theme.secondaryTextColor}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
                 android:text="@string/about_app"
@@ -292,11 +289,11 @@
                     android:orientation="vertical">
 
                     <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/aboutAuthors"
+                        onClick="@{onClick}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        onClick="@{onClick}"
-                        android:id="@+id/aboutAuthors"
                         android:orientation="horizontal">
 
                         <TextView
@@ -325,9 +322,11 @@
                         android:layout_marginEnd="16dp" />
 
                     <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/aboutApp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:onClick="@{onClick}"
                         android:orientation="horizontal">
 
                         <TextView
@@ -350,7 +349,6 @@
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.cardview.widget.CardView>
-
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
