--- a/app/src/main/res/layout/dialog_audio.xml
+++ b/app/src/main/res/layout/dialog_audio.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -14,47 +14,140 @@
             type="String" />
 
         <variable
-            name="description"
+            name="duration"
             type="String" />
 
         <variable
-            name="isPlaying"
-            type="Boolean" />
+            name="position"
+            type="String" />
 
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        backgroundColor="@{theme.backgroundColor}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        backgroundColor="@{theme.backgroundColor}">
+        app:behavior_hideable="false"
+        app:behavior_peekHeight="200dp"
+        android:id="@+id/bottom_sheet"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        android:orientation="vertical">
 
         <TextView
             textColor="@{theme.primaryTextColor}"
-            android:textSize="16sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="8dp"
             android:text="@{title}"
-            android:textStyle="bold" />
-
-        <TextView
-            textColor="@{theme.secondaryTextColor}"
             android:textSize="16sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{description}"
-            tools:text="24.5 MB | M4A"
-            tools:textSize="14sp" />
+            android:textStyle="bold" />
 
         <SeekBar
             android:id="@+id/seek_bar"
             thumbColor="@{theme.primaryTextColor}"
             thumbTint="@{theme.secondaryTextColor}"
-            visibility="@{isPlaying}"
-            android:max="10000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" />
+            android:max="10000" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="16dp">
+
+            <TextView
+                textColor="@{theme.primaryTextColor}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:text="@{position}"
+                android:hint="00:00"
+                hintTextColor="@{theme.primaryTextColor}"
+                android:textSize="14sp"
+                tools:text="24.5 MB | M4A"
+                tools:textSize="14sp" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/prev"
+                    iconColor="@{theme.primaryTextColor}"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_gravity="start"
+                    android:padding="12dp"
+                    android:src="@drawable/ic_previous"
+                    tools:ignore="ContentDescription" />
+
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/pause"
+                        iconColor="@{theme.primaryTextColor}"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp"
+                        android:layout_gravity="center"
+                        android:padding="12dp"
+                        android:src="@drawable/ic_pause"
+                        tools:ignore="ContentDescription" />
+
+                    <ImageView
+                        android:id="@+id/play"
+                        iconColor="@{theme.primaryTextColor}"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp"
+                        android:layout_gravity="center"
+                        android:padding="12dp"
+                        android:src="@drawable/ic_play"
+                        tools:ignore="ContentDescription" />
+
+                    <ImageView
+                        android:id="@+id/download"
+                        iconColor="@{theme.primaryTextColor}"
+                        android:layout_width="56dp"
+                        android:layout_height="56dp"
+                        android:layout_gravity="center"
+                        android:padding="20dp"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_download"
+                        tools:ignore="ContentDescription" />
+
+
+                </FrameLayout>
+
+                <ImageView
+                    android:id="@+id/next"
+                    iconColor="@{theme.primaryTextColor}"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_gravity="end"
+                    android:padding="12dp"
+                    android:src="@drawable/ic_next"
+                    tools:ignore="ContentDescription" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <TextView
+                textColor="@{theme.primaryTextColor}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="@{duration}"
+                android:textSize="14sp"
+                android:hint="00:00"
+                hintTextColor="@{theme.primaryTextColor}"
+                tools:text="24.5 MB | M4A"
+                tools:textSize="14sp" />
+        </FrameLayout>
+
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
